# auto_designer

./: README.md  pyproject.toml
auto_designer/: __init__.py  cli.py
auto_designer/booking/: __init__.py  components.py  constants.py  refs.json  screens.py
auto_designer/core/: __init__.py  board_client.py  layout.py  primitives.py
