[project]
name = "auto-designer"
version = "0.1.0"
description = "Python lib + CLI для рисования макетов на доске board (https://board.dev.raftforge.art)"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "click>=8.1.0",
]

[project.scripts]
auto-design = "auto_designer.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["auto_designer"]
